Mvc (#5)
* Fix Data

* Create UserCreation API and rework weather data to append and send all data

* make routes modular and fix swagger doc for /user/create to take form data and test w/ swagger

* Create MVC Pattern for Controllers and Routes

* Add Login Controller Logic to userController

* createDBConnection

* create User Model and api requests to find a user/users

* modify controller to work w/ database and implement swagger autogen

* create validation, create new user queries, hash password to store in database

* create login controller logic, clean up user model

* complete authorization middleware, add swagger documentation

* created weather model and reworked controller, added verification to weather routes
